# hexlet_advanced_testing

./: README.md  pyproject.toml
src/: m3_p14_l2_fixtures_app.py  m3_p14_l3_side_effects_app.py  m3_p14_l4_app.py  m3_p14_l5_dependency_inversion_app.py  m3_p14_l6_testing_HTTP_requests_app.py  m3_p14_l6_testing_HTTP_requests_fake_client.py  m3_p14_l7_monkey_patch_app.py  m3_p14_l8_mocking_app.py
tests/: test_m3_p14_l2_fixtures_app.py  test_m3_p14_l3_fixtures_app.py  test_m3_p14_l3_side_effects_app.py  test_m3_p14_l4_app.py  test_m3_p14_l4_side_effects_app.py  test_m3_p14_l5_dependency_inversion_app.py  test_m3_p14_l6_testing_HTTP_requests_app.py  test_m3_p14_l7_monkey_patch_app.py  test_m3_p14_l8_mocking_app.py
tests/fixtures/: after.html
